fixed alignment of title - Nick

--- a/src/Components/Styles.css
+++ b/src/Components/Styles.css
@@ -6,7 +6,7 @@
     position:absolute; right: 100px;
 }
 
-.Title{
-    
-    text-align: center;
+.Title{  
+    margin: auto;
+    padding-right: 300px;
 }
